labs/lab-08-workload-network-hardening/evidence/final/network-policy-effective.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"backend-ingress","namespace":"lab08"},"spec":{"ingress":[{"from":[{"podSelector":{"matchLabels":{"access":"authorized"}}}],"ports":[{"port":80,"protocol":"TCP"}]}],"podSelector":{"matchLabels":{"app":"backend"}},"policyTypes":["Ingress"]}}
  creationTimestamp: "2026-09-30T15:49:43Z"
  generation: 1
  name: backend-ingress
  namespace: lab08
  resourceVersion: "29636"
  uid: 2758c0eb-935b-4c88-ac83-5ad55ba38ffb
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          access: authorized
    ports:
    - port: 80
      protocol: TCP
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
  - Ingress
